# MoMuHackathon

./: README.md  app.py  chat.py  graph_output.txt  pyproject.toml
Data/: context.pkl  context_2024-11-24_13-34-01.pkl  context_2024-11-24_13-35-12.pkl  dataset.pkl  dataset_2024-11-24_13-35-12.pkl  graph_output.txt  index.faiss  index.pkl  items.json  items.ttl  items_filtered.json  items_filtered.ttl  new_data.json  new_data.ttl  new_data_graph_output.txt
Data/vector_store_2024-11-24_13-35-12/: index.faiss  index.pkl
output_documents/: 14181.txt  14183.txt  14390.txt  14455.txt  14460.txt  14461.txt  14462.txt  14463.txt  14464.txt  14540.txt  14542.txt  14641.txt  14730.txt  14733.txt  14758.txt  14964.txt  14993.txt  15033.txt  15038.txt  15103.txt  15138.txt  15240.txt  15311.txt  15328.txt  155.txt  15551.txt  156.txt  15630.txt  15631.txt  15695.txt  157.txt  15706.txt  15766.txt  15808.txt  15811.txt  15812.txt  15819.txt  15861.txt  15864.txt  15938.txt  (+63 more)
src/: TTL2TXT.py  image_retriever.py  langchain_ollama.ipynb  llm.py  preprocess_docs.py  rdf_convert.py  rdf_convert_filtered  rdf_convert_fromURI.py  ttl_vec_context.py
src/.ipynb_checkpoints/: langchain_ollama-checkpoint.ipynb
